<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <ImageView
        android:id="@+id/logoutButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="350dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:contentDescription="@string/logout_button"
        android:focusable="true"
        android:src="@drawable/account_logout_icon" />

    <TextView
        android:id="@+id/gandline_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/maccos_double"
        android:text="@string/app_name"
        android:textColor="#706E6E"
        android:textSize="70sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/coins_lay_blog"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="1.75dp"
            android:background="@android:color/white"
            android:textColorHint="#706E6E"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="#706E6E"
            android:textCursorDrawable="@null"
            app:placeholderTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/blogCoinsAmountEditText"
                android:textCursorDrawable="@null"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/input_forms_style"
                android:hint="@string/money_amount_hint"
                android:inputType="numberDecimal"
                android:paddingVertical="25dp"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/link_lay_blog"
            android:layout_width="250dp"
            android:textCursorDrawable="@null"
            android:layout_height="wrap_content"
            android:layout_margin="1.75dp"
            android:background="@android:color/white"
            android:textColorHint="#706E6E"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="#706E6E"
            app:placeholderTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/blogLinkEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textCursorDrawable="@null"
                android:autofillHints="emailAddress"
                android:background="@drawable/input_forms_style"
                android:hint="@string/blog_link_hint"
                android:inputType="textEmailAddress"
                android:paddingVertical="25dp"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/sent_counter_text_blog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:gravity="center_horizontal"
            android:text="@string/default_coins_counter_text"
            android:textColor="#706E6E"
            android:textSize="30sp" />

        <Button
            android:id="@+id/sendSubmitButtonBlog"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:drawableLeft="@drawable/coins_send_icon"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/send_button_text"
            android:textColor="#454147"
            app:strokeColor="#C1C0C0"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/author_app_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/author_string"
            android:textColor="#706E6E" />


    </LinearLayout>


</RelativeLayout>